--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,9 @@ include/config
 include/linux/version.h
 include/generated
 arch/*/include/generated
+kernel/hz.bc
+comp
+ini
 
 # stgit generated dirs
 patches-*
