defconfig: msm8974: Built in exFAT driver
Change-Id: I5957f77883646c31c51df93c8d46958d35ea33ca

--- a/arch/arm/configs/lineageos_shinano_castor_windy_defconfig
+++ b/arch/arm/configs/lineageos_shinano_castor_windy_defconfig
@@ -596,6 +596,9 @@ CONFIG_QUOTA=y
 CONFIG_FUSE_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+CONFIG_EXFAT_DELAYED_SYNC=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
