--- a/arch/arm/configs/lineageos_shinano_castor_defconfig
+++ b/arch/arm/configs/lineageos_shinano_castor_defconfig
@@ -594,6 +594,9 @@ CONFIG_EXT4_FS_SECURITY=y
 CONFIG_FUSE_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
+CONFIG_EXFAT_FS=y
+CONFIG_EXFAT_DISCARD=y
+CONFIG_EXFAT_DELAYED_SYNC=y
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_TMPFS_XATTR=y
